tests/ui/discord-frontend/command_macro/command_macro_invalid_command_type.stderr
error: invalid command type
  --> tests/ui/discord-frontend/command_macro/command_macro_invalid_command_type.rs:31:20
   |
LL |     command_type = 0,
   |                    ^

error: aborting due to 1 previous error

